fix test shift drag items

--- a/projects/demo/src/app/sort-list/sort-list.component.scss
+++ b/projects/demo/src/app/sort-list/sort-list.component.scss
@@ -21,6 +21,7 @@
   cursor: move;
   background: white;
   font-size: 14px;
+  min-height: 57px;
 }
 
 .drag-handle {
